--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "/"
 languageCode = "en-us"
-title = "Kronos News"
+title = "먹는 물건"
 theme = "hugo-xmag"
 googleAnalytics = ""
 disqusShortname = ""
