타이틀을 '먹는 신문'으로 변경

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "/"
 languageCode = "en-us"
-title = "먹는 물건"
+title = "먹는 신문"
 theme = "hugo-xmag"
 googleAnalytics = ""
 disqusShortname = ""
