--- a/config.toml
+++ b/config.toml
@@ -44,3 +44,7 @@ paginate = 6
     back = "&larr; Back to Home"
     edit = "Edit this page &rarr;"
     truncated = "&hellip;"
+
+[params.banner]
+    src = "images/banner.jpg"
+    alt = ""
