배너 타이틀 수정, gitignore에 public 폴더 추가

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "/"
 languageCode = "en-us"
-title = "Kronos News"
+title = "농식품 정보 신문"
 theme = "hugo-xmag"
 googleAnalytics = ""
 disqusShortname = ""
